--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "classnames": "^2.2.3",
     "immutable": "^3.7.6",
     "pure-render-decorator": "^0.2.0",
     "random-words": "0.0.1",
