--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "deploy": "webpack -p",
     "start": "webpack-dev-server",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'"
+    "test": "mocha --compilers js:babel-core/register --watch --require ./test/test-helper.js 'test/**/*.@(js|jsx)'"
   },
   "repository": {
     "type": "git",
