--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chai-enzyme": "^0.4.0",
     "chai-immutable": "^1.5.3",
     "css-loader": "^0.23.1",
+    "envify": "^1.2.1",
     "enzyme": "^1.5.0",
     "jsdom": "^8.0.2",
     "mocha": "^2.4.5",
@@ -41,6 +42,7 @@
     "react-addons-test-utils": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
+    "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
