update package info

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
       "react"
     ]
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Aaron Robb",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/aaronmrobb/invaders/issues"
   },
